refactor: only use HSD's heuristics.